...
            verticalArrangement = Arrangement.SpaceBetween,
            modifier = Modifier.background(MaterialTheme.colors.background)
        ) {
            TracksObserver(Modifier.weight(1f, fill = false))
            val currentTrack by viewModel.currentTrack.observeAsState()
            currentTrack?.let {
                TrackController(track = it)
            }
        }
    }

    @OptIn(ExperimentalFoundationApi::class, ExperimentalMaterialApi::class)
    @Composable
...
                    ) {
                        Text(
                            text = track.name,
                            maxLines = 1,
                            overflow = TextOverflow.Ellipsis,
                            style = trackTextBold,
                            modifier = Modifier.semantics { testTag = "TrackControllerName" }
                        )
                        Text(
                            text = track.artist,
                            maxLines = 1,
                            overflow = TextOverflow.Ellipsis,
                            style = trackTextArtist
...
                    }
                    Row(
                        verticalAlignment = Alignment.CenterVertically
                    ) {
                        IconButton(
                            onClick = { viewModel.playPreviousTrack() },
                            Modifier.padding(start = 4.dp, top = 4.dp, end = 4.dp).semantics { testTag = "ButtonPreviousTrack" }
                        ) {
                            Icon(
                                painter = painterResource(id = R.drawable.icon_previous_arrow),
                                contentDescription = "",
                                tint = MaterialTheme.colors.primary
                            )
...
                            Modifier.padding(start = 4.dp, top = 4.dp, end = 4.dp).semantics { testTag = "ButtonResumePause"}
                        ) {
                            val resource = if (isCurrentPaused == true) R.drawable.icon_play_arrow else R.drawable.icon_pause
                            Log.i("test", resource.toString())
                            Icon(
                                painter = painterResource(id = resource),
                                contentDescription = "AAAA",
                                tint = MaterialTheme.colors.primary,
                                modifier = Modifier.semantics { drawableId = resource}
                            )
                        }
                        IconButton(
                            onClick = { viewModel.playNextTrack() },
                            Modifier.padding(start = 4.dp, top = 4.dp, end = 8.dp).semantics { testTag = "ButtonNextTrack" }
                        ) {
                            Icon(
                                painter = painterResource(id = R.drawable.icon_next_arrow),
                                contentDescription = "",
                                tint = MaterialTheme.colors.primary
                            )
...
